--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,17 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite ",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@iconify-json/mingcute": "^1.2.1",
+    "axios": "^1.7.9",
+    "express": "^4.21.2",
     "lucide-react": "^0.456.0",
+    "mysql": "^2.18.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0"
